[tool.poetry]
name = "concat_pdf"
version = "0.1.0"
description = "Easily concatenate separated PDF files into one file."
authors = ["ikanago <ikanago-dev@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyPDF2 = "^2.11.1"
click = "^8.1.3"
natsort = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
